--- a/src/main/resources/frontend/src/App.css
+++ b/src/main/resources/frontend/src/App.css
@@ -1,5 +1,12 @@
 .App {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.App-header {
+  position: relative;
 }
 
 .App-logo {
@@ -13,8 +20,11 @@
   }
 }
 
-.App-header {
+body {
   background-color: #282c34;
+}
+
+.App-header {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -35,4 +45,76 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.button {
+  padding: 10px 20px;
+  border: 2px solid #ccc; 
+  border-radius: 5px;
+  cursor: pointer;
+  outline: none;
+  margin: 10px; 
+}
+
+.button-container {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+.primary-button {
+  background-color: #007bff;
+  color: #fff;
+}
+
+.secondary-button {
+  background-color: #6c757d;
+  color: #fff;
+}
+
+.active-button {
+  background-color: #28a745 !important; /* Override default button background */
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.card {
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.primary-card {
+  background-color: #f8f9fa;
+}
+
+.secondary-card {
+  background-color: #ffffff;
+}
+
+
+.dialog-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999; /* Ensure it's on top of everything */
+}
+
+.dialog-content {
+  background-color: #aaa; /* White background for modal content */
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Box shadow for depth */
+  max-width: 80%; /* Limit maximum width of modal content */
 }
