--- a/src/main/resources/frontend/src/App.css
+++ b/src/main/resources/frontend/src/App.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  
   height: 100vh;
 }
 
@@ -14,14 +15,8 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 body {
-  background-color: #282c34;
+  background-color: #ececec;
 }
 
 .App-header {
@@ -30,36 +25,34 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: calc(5px + 2vmin);
+  width: calc(100vw - 40px); 
+  color: black;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .button {
   padding: 10px 20px;
-  border: 2px solid #ccc; 
+  border: 2px solid #c7c7c7; 
   border-radius: 5px;
   cursor: pointer;
   outline: none;
   margin: 10px; 
+  font-size: calc(5px + 2vmin);
+}
+
+.inner-button {
+  font-size: calc(5px + 1vmin);
+  padding: 5px 5px;
 }
 
 .button-container {
-  position: absolute;
-  top: 20px;
-  left: 20px;
+  position: sticky;
+  top: 0;
+  z-index: 999; /* Adjust z-index as needed */
 }
 
 .primary-button {
@@ -80,10 +73,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
 }
 
 .card {
+  width: calc(80vw);
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -117,4 +110,68 @@ body {
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Box shadow for depth */
   max-width: 80%; /* Limit maximum width of modal content */
+}
+
+.list {
+  list-style-type: none;
+  padding: 0;
+}
+
+.list li:nth-child(even) {
+  background-color: #f8f9fa; 
+  border: 2px solid #c7c7c7; 
+
+}
+
+.list li:nth-child(odd) {
+  background-color: #dee2e6;
+  border: 2px solid #c7c7c7; 
+
+}
+
+
+.inner-list {
+  list-style-type: none;
+  padding: 0;
+}
+
+.inner-list li:nth-child(even) {
+  background-color: #f8f9fa; 
+  border: 2px solid #8f8989; 
+
+}
+
+.inner-list li:nth-child(odd) {
+  background-color: #dee2e6;
+  border: 2px solid #a9a0a0; 
+
+}
+
+
+.item-list-container {
+  display: flex;
+  justify-content: space-between;
+
+  /* flex-wrap: wrap; Allow items to wrap to the next line if necessary */
+  gap: 10px; 
+}
+
+.item-list-container .flex-grow-item {
+  flex-grow: 1; /* Make this item take up any remaining space */
+}
+
+.warehouse-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.warehouse-info {
+  flex-grow: 1;
+}
+
+
+
+.drop-down {
+
 }
