Extra backend and more front end

--- a/src/main/resources/frontend/src/App.css
+++ b/src/main/resources/frontend/src/App.css
@@ -175,3 +175,33 @@ body {
 .drop-down {
 
 }
+
+.vertical-present {
+  display: block
+}
+
+.horizontal-present {
+  display:flex
+}
+
+.horizontal-present > * {
+  margin: 5px;
+
+  padding: 6px
+}
+
+.title-line {
+  background-color: #c4e0ff;
+}
+
+.management-card {
+  background-color: #ffffff;
+}
+
+.white-background{
+  background-color: #ffffff;
+}
+
+.padded{
+  margin-top: 20px;
+}
